<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="main logo"
            android:src="@drawable/_logo"/>


            <EditText android:id="@+id/input_name"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="Username"
                      android:inputType="text"
                      android:maxLines="1"/>

            <EditText android:id="@+id/input_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="Email"
                      android:inputType="textEmailAddress"/>

            <EditText android:id="@+id/input_mobile"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="Mobile Number"
                      android:inputType="phone"/>

            <EditText android:id="@+id/input_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="Password"
                      android:inputType="textPassword"/>

            <EditText android:id="@+id/input_reEnterPassword"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="Re-enter Password"
                      android:inputType="textPassword"/>

        <!-- Signup Button -->
        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="Create Account"/>

        <TextView android:id="@+id/link_login"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:gravity="center"
                  android:text="Already a member? Login"
                  android:textSize="16sp"/>

    </LinearLayout>
</ScrollView>